--- a/_config.yml
+++ b/_config.yml
@@ -2,25 +2,20 @@
 #
 
 # Site settings
-title: Spectral
-description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
+title: Nayantara Parpia
+description: Kathak Dancer and Teacher
+owner: Nayantara Parpia # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
-email: your-email@domain.com
+email: nayantara.parpia@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://nayantaraparpia.com" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
+  facebook-official: https://facebook.com/nayantaraparpia
+  instagram: https://www.instagram.com/nayantara_kathak/
   linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
-  #email: /contact/
+  #google-plus-square: https://plus.google.com/u/0/+<username>
+  email: /contact/
   #flickr:
-  #instagram:
   #youtube-square:
   #spotify:
   #stack-overflow:
